Add some people

--- a/people/index.html
+++ b/people/index.html
@@ -137,7 +137,7 @@
 
                 <div class="image--cover-container">
                     <img src="/images/people/hassan_khaleghirad.png" class="image--cover">
-                    <p>Hassan Khaleghi Rad</p>
+                    <p>Hassan Khaleghirad</p>
                 </div>			
 
                 <div class="image--cover-container">
@@ -151,7 +151,7 @@
                 </div>							
  
                 <div class="image--cover-container">
-                    <img src="/images/people/default.png" class="image--cover">
+                    <img src="/images/people/mohammadreza_keshtkar.jpg" class="image--cover">
                     <p>Mohammad Reza Keshtkar Langerodi</p>
                 </div>							 
 
@@ -193,13 +193,13 @@
                 </div>
 
                 <div class="image--cover-container">
-                    <img src="/images/people/default.png" class="image--cover">
+                    <img src="/images/people/ali_derakhshan.png" class="image--cover">
                     <p>Ali Derakhshan</p>
                 </div>		
 				
                 <div class="image--cover-container">
                     <img src="/images/people/default.png" class="image--cover">
-                    <p>Zakiye SalehiZade</p>
+                    <p>Zakiye Salehizade</p>
                 </div>
 
                 <div class="image--cover-container">
@@ -214,7 +214,7 @@
 				
                 <div class="image--cover-container">
                     <img src="/images/people/amirhossein_mehrvarz.jpg" class="image--cover">
-                    <p>AmirHossein Mehrvarz</p>
+                    <p>Amir Hossein Mehrvarz</p>
                 </div>		
 
                 <div class="image--cover-container">
@@ -228,7 +228,7 @@
                 </div>		
 
                 <div class="image--cover-container">
-                    <img src="/images/people/default.png" class="image--cover">
+                    <img src="/images/people/mina_faridi.jpg" class="image--cover">
                     <p>Mina Faridi</p>
                 </div>						
 
