Add some people

--- a/people/index.html
+++ b/people/index.html
@@ -168,7 +168,7 @@
                 </div>							
 
                 <div class="image--cover-container">
-                    <img src="/images/people/vahid_sohrabi.png" class="image--cover">
+                    <img src="/images/people/vahid_sohrabi.jpg" class="image--cover">
                     <p>Vahid Sohrabi</p>
                 </div>		
 				
