add some people

--- a/people/index.html
+++ b/people/index.html
@@ -198,7 +198,7 @@
                 </div>		
 				
                 <div class="image--cover-container">
-						<img src="/images/people/default.png" class="image--cover">
+						<img src="/images/people/zakiye_salehizade.jpeg" class="image--cover">
                     <p>Zakiye Salehizade</p>
                 </div>
 
