--- a/people/index.html
+++ b/people/index.html
@@ -218,7 +218,7 @@
                 </div>		
 
                 <div class="image--cover-container">
-						<img src="/images/people/default.png" class="image--cover">
+						<img src="/images/people/zeynab_kabiri.jpg" class="image--cover">
                     <p>Zeynab Kabiri Zarinfar</p>
                 </div>		
 
