--- a/alumni/index.html
+++ b/alumni/index.html
@@ -13,15 +13,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="University of Tehran: High Performance Network Laboratory" />
+  <meta property="og:title" content="High Performance Network Laboratory, University of Tehran" />
   <meta name="keywords" content="High Performance Network Laboratory, University of Tehran">
 
-  <title>University of Tehran: High Performance Network Laboratory</title>
+  <title>High Performance Network Laboratory, University of Tehran</title>
   <meta name="description" content="High Performance Network Laboratory">
   
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="canonical" href="http://UT-Network-Lab.github.io/">
-  <link rel="alternate" type="application/rss+xml" title="University of Tehran High Performance Network Lab" href="http://hpnl.ut.ac.ir" />
+  <link rel="canonical" href="https://hpnl.ir/">
+  <link rel="alternate" type="application/rss+xml" title="High Performance Network Laboratory, University of Tehran" href="https://hpnl.ir" />
 <link rel='stylesheet' id='open-sans-css'  href='//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&#038;subset=latin%2Clatin-ext&#038;ver=4.2.4' type='text/css' media='all' />
 <link href='https://fonts.googleapis.com/css?family=Titillium+Web:600italic,600,400,400italic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -35,7 +35,7 @@
   <div class="wrapper">
       <table><tr>
           <td><img width="75" src="/images/tehran.png" valign="middle"></td>
-          <td style="padding-left:10px;"><a style="font-size: 15px;color: gray; font-weight: bold;" class="site-title" href="http://ece.ut.ac.ir">ECE School of Engineering - University of Tehran</a>
+          <td style="padding-left:10px;"><a style="font-size: 15px;color: gray; font-weight: bold;" class="site-title" href="https://ece.ut.ac.ir">ECE School of Engineering - University of Tehran</a>
           <br/>
           <span style="margin-top: -2px;margin-bottom: -5px;" class="site-title"><b>High Performance Network Laboratory</b></span>
           <br/>
@@ -249,12 +249,15 @@
       <i class="fa fa-twitter" style="color:gray"></i>
     </a>
   </li>-->
-
+	<li>
+    <a href="https://hpnl.ir" target="_blank">
+      <i class="fas fa-globe" style="color:gray"></i> hpnl.ir</a>
+	</li> 
   
-  <li>
-    <a href="https://UT-Network-Lab.github.io" target="_blank">
-      <i class="fas fa-globe" style="color:gray"></i> UT-Network-Lab.github.io</a>
-  </li>  
+	<li>
+    <a href="https://github.com/UT-Network-Lab" target="_blank">
+      <i class="fas fa-globe" style="color:gray"></i> github.com/UT-Network-Lab</a>
+	</li>  
    
         </ul>
       </div>
