--- a/people/index.html
+++ b/people/index.html
@@ -141,7 +141,7 @@
                 </div>			
 
                 <div class="image--cover-container">
-						<img src="/images/people/default.png" class="image--cover">
+						<img src="/images/people/khalil_jahani.png" class="image--cover">
                     <p>Khalil Jahani</p>
                 </div>			
 
