--- a/pecs/assignments/index.html
+++ b/pecs/assignments/index.html
@@ -13,15 +13,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="University of Tehran: Performance Evaluation of Computer Systems" />
+  <meta property="og:title" content="Performance Evaluation of Computer Systems, University of Tehran" />
   <meta name="keywords" content="Performance Evaluation of Computer Systems, University of Tehran">
 
-  <title>University of Tehran: Performance Evaluation of Computer Systems</title>
+  <title>Performance Evaluation of Computer Systems, University of Tehran</title>
   <meta name="description" content="Performance Evaluation of Computer Systems">
   
   <link rel="stylesheet" href="/pecs/css/main.css">
-  <link rel="canonical" href="http://UT-Network-Lab.github.io/">
-  <link rel="alternate" type="application/rss+xml" title="University of Tehran High - Performance Network Lab" href="http://hpnl.ut.ac.ir" />
+  <link rel="canonical" href="http://hpnl.ir/">
+  <link rel="alternate" type="application/rss+xml" title="University of Tehran High - Performance Network Lab" href="http://hpnl.ir" />
 <link rel='stylesheet' id='open-sans-css'  href='//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&#038;subset=latin%2Clatin-ext&#038;ver=4.2.4' type='text/css' media='all' />
 <link href='https://fonts.googleapis.com/css?family=Titillium+Web:600italic,600,400,400italic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -35,9 +35,9 @@
   <div class="wrapper">
       <table><tr>
           <td><img width="75" src="/pecs/images/tehran.png" valign="middle"></td>
-          <td style="padding-left:10px;"><a style="font-size: 15px;color: gray; font-weight: bold;" class="site-title" href="http://ece.ut.ac.ir">ECE School of Engineering - University of Tehran</a>
+          <td style="padding-left:10px;"><a style="font-size: 15px;color: gray; font-weight: bold;" class="site-title" href="https://ece.ut.ac.ir" target="_blank">ECE School of Engineering - University of Tehran</a>
           <br/>
-          <span style="margin-top: -2px;margin-bottom: -10px;" class="site-title"><b>Performance Evaluation of Computer Systems</b></span>
+          <span style="margin-top: -2px;margin-bottom: -5px;" class="site-title"><b>Performance Evaluation of Computer Systems</b></span>
           <br/>
           <span style="color: gray;font-size: 12px;font-weight: bold;">Spring 2022</span>
           </td>
@@ -59,7 +59,7 @@
     <li><a class="page-link" href="/pecs/"><i class="fa fa-home fa-lg"></i>Home</a></li>
     <li><a class="page-link" href="/pecs/schedule/"><i class="fas fa-calendar-alt"></i> Schedule</a></li>
     <li><a class="page-link" href="/pecs/lectures/"><i class="fas fa-book-reader"></i> Lectures</a></li>
-    <li><a class="page-link" href="/pecs/assignments/"><i class="fas fa-user-graduate"></i> Assignments</a></li>
+    <li><a class="page-link" href="/pecs/assignments/"><i class="fa fa-book-open"></i> Assignments</a></li>
     <li><a class="page-link" href="/pecs/final_project/"><i class="fas fa-user-graduate"></i>Final Project</a></li>
     <li><a class="page-link" href="/pecs/course-materials/"><i class="fas fa-book"></i> Course Materials</a></li>
 </ul>
@@ -208,11 +208,15 @@ Tehran, Iran.<br />
     </a>
   </li>-->
 
-  <li>
-    <a href="http://hpnl.ut.ac.ir" target="_blank">
-      <i class="fas fa-globe" style="color:gray"></i> hpnl.ut.ac.ir
-    </a>
-  </li>
+	<li>
+    <a href="https://hpnl.ir" target="_blank">
+      <i class="fa fa-globe" style="color:gray"></i> hpnl.ir</a>
+	</li> 
+  
+	<li>
+    <a href="https://github.com/UT-Network-Lab" target="_blank">
+      <i class="fab fa-github" style="color:gray"></i> github.com/UT-Network-Lab</a>
+	</li>
    
         </ul>
       </div>
