add books, useful reads, useful links pages

--- a/alumni/index.html
+++ b/alumni/index.html
@@ -35,11 +35,11 @@
   <div class="wrapper">
       <table><tr>
           <td><img width="75" src="/images/tehran.png" valign="middle"></td>
-          <td style="padding-left:10px;"><a style="font-size: 15px;color: gray; font-weight: bold;" class="site-title" href="https://ece.ut.ac.ir">ECE School of Engineering - University of Tehran</a>
+          <td style="padding-left:10px;"><a style="font-size: 15px;color: gray; font-weight: bold;" class="site-title" href="https://ece.ut.ac.ir" target="_blank">ECE School of Engineering - University of Tehran</a>
           <br/>
           <span style="margin-top: -2px;margin-bottom: -5px;" class="site-title"><b>High Performance Network Laboratory</b></span>
           <br/>
-          <span style="color: gray;font-size: 12px;font-weight: bold;">UT-Network-Lab.github.io</span>		  		  
+          <span style="color: gray;font-size: 12px;font-weight: bold;">hpnl.ir</span>		  		  
           </td>
         </tr></table>
 
@@ -57,8 +57,11 @@
 
  <ul class="menu">
     <li><a class="page-link" href="/"><i class="fa fa-home fa-lg"></i>Home</a></li>
-    <li><a class="page-link" href="/people/"><i class="fas fa-book-reader"></i> People</a></li>	
+    <li><a class="page-link" href="/people/"><i class="fas fa-user-friends"></i> People</a></li>	
     <li><a class="page-link" href="/alumni/"><i class="fas fa-user-graduate"></i> Alumni</a></li>
+    <li><a class="page-link" href="/books/"><i class="fas fa-book"></i> Books</a></li>	
+    <li><a class="page-link" href="/useful-reads/"><i class="fas fa-book-open"></i> Useful reads</a></li>
+    <li><a class="page-link" href="/useful-links/"><i class="fas fa-globe"></i> Useful links</a></li>			
 </ul>
 
      </div>  
@@ -256,7 +259,7 @@
   
 	<li>
     <a href="https://github.com/UT-Network-Lab" target="_blank">
-      <i class="fas fa-globe" style="color:gray"></i> github.com/UT-Network-Lab</a>
+      <i class="fab fa-github" style="color:gray"></i> github.com/UT-Network-Lab</a>
 	</li>  
    
         </ul>
