fix mobile Button and useful reads

--- a/useful-reads/index.html
+++ b/useful-reads/index.html
@@ -103,7 +103,7 @@
         </span>
         <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif; float:right">
             <a title="PhD Proposal Guide" href="/files/useful/phd-proposal-guide.pdf">
-                <i class="fas fa-link"></i>
+                <i class="fas fa-file-pdf"></i>
             </a>
         </strong>
     </li>
@@ -114,7 +114,7 @@
         </span>
         <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif; float:right">
             <a title="How to Increase the Chances Your Paper is Accepted at ACM SIGCOMM" href="/files/useful/ccr-9807-partridge.pdf">
-                <i class="fas fa-link"></i>
+                <i class="fas fa-file-pdf"></i>
             </a>
         </strong>
     </li>
@@ -125,7 +125,7 @@
         </span>
         <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif; float:right">
             <a title="How to Read a Paper" href="/files/useful/how-to-read-a-paper.pdf">
-                <i class="fas fa-link"></i>
+                <i class="fas fa-file-pdf"></i>
             </a>
         </strong>
     </li>
@@ -136,7 +136,7 @@
         </span>
         <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif; float:right">
             <a title="Efficient Reading of Papers in Science and Technology" href="/files/useful/efficient-reading.pdf">
-                <i class="fas fa-link"></i>
+                <i class="fas fa-file-pdf"></i>
             </a>
         </strong>
     </li>
@@ -147,7 +147,7 @@
         </span>
         <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif; float:right">
             <a title="How to Read a Paper by S. Keshav" href="/files/useful/paper-reading-keshav.pdf">
-                <i class="fas fa-link"></i>
+                <i class="fas fa-file-pdf"></i>
             </a>
         </strong>
     </li>
@@ -158,7 +158,7 @@
         </span>
         <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif; float:right">
             <a title="You and Your Research by J. F. Kaiser" href="/files/useful/You-and-Your-Research.pdf">
-                <i class="fas fa-link"></i>
+                <i class="fas fa-file-pdf"></i>
             </a>
         </strong>
     </li>
@@ -180,7 +180,7 @@
         </span>
         <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif; float:right">
             <a title="Making Tables and Figures" href="/files/useful/htw_guide_table-figures.pdf">
-                <i class="fas fa-link"></i>
+                <i class="fas fa-file-pdf"></i>
             </a>
         </strong>
     </li>
@@ -191,7 +191,7 @@
         </span>
         <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif; float:right">
             <a title="How to get your paper rejected" href="/files/useful/get-your-paper-rejected.pdf">
-                <i class="fas fa-link"></i>
+                <i class="fas fa-file-pdf"></i>
             </a>
         </strong>
     </li>
@@ -213,7 +213,7 @@
         </span>
         <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif; float:right">
             <a title="Scientific Method, Indranil Gupta" href="/files/useful/scientific_method.pdf">
-                <i class="fas fa-link"></i>
+                <i class="fas fa-file-pdf"></i>
             </a>
         </strong>
     </li>
@@ -224,7 +224,7 @@
         </span>
         <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif; float:right">
             <a title="A PhD Is Not Enough! A Guide to Survival in Science" href="/files/useful/A PhD is not enough.pdf">
-                <i class="fas fa-link"></i>
+                <i class="fas fa-file-pdf	"></i>
             </a>
         </strong>
     </li>	
