add people pages

--- a/alumni/index.html
+++ b/alumni/index.html
@@ -20,6 +20,7 @@
   <meta name="description" content="High Performance Network Laboratory">
   
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/people.css">
   <link rel="canonical" href="https://hpnl.ir/">
   <link rel="alternate" type="application/rss+xml" title="High Performance Network Laboratory, University of Tehran" href="https://hpnl.ir" />
 <link rel='stylesheet' id='open-sans-css'  href='//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&#038;subset=latin%2Clatin-ext&#038;ver=4.2.4' type='text/css' media='all' />
@@ -143,8 +144,10 @@
                 </div>			
 
                 <div class="image--cover-container">
+					<a href="/people/mahdi-dolati.html" target="_blank">
 						<img src="/images/alumni/mahdi_dolati.jpg" class="image--cover">
                     <p>Mahdi Dolati</p>
+					</a>
                 </div>								 
 
             </div>
