--- a/people/ahmad-khonsari.html
+++ b/people/ahmad-khonsari.html
@@ -74,38 +74,84 @@
 
     <div class="page-content">
       <div class="wrapper">
-		<div class="home">
-
-	<img class="img-cover mb-3" src="/images/1.jpg">
-
-    <div class="announcement-box" style="margin-top:30px">
-        <h2>Announcements</h2>
-
-
-    <ul>
-<!--        example of announcements -->
-<!--        <li class="no-p-margin"> -->
-<!--           Please Join the telegram channel [<a href="https://t.me/ChannelName" target="_blank">@ChannelName</a>] -->
-<!--            <p></p>-->
-
-<!--            -->
-<!--        </li>-->
-
-        <li class="no-p-margin">
-            High Performance Network Laboratory Website [<a href="https://hpnl.ir" target="_blank">hpnl.ir</a>]
-            <p></p>
-
-        </li>
-
-        
-    </ul>
-    </div>
-    <br />
-
-    <h2><b>High Performance Network Laboratory</b></h2>
-    <p>A unique blend of fundamental and applied research team, taking advantage of mathematical theorems so as to build practical systems for improving performance, dependability and security of computer and communication systems. SDN is a major paradigm shift in the networking. In SDNs a globally centralized entity, controls the behavior of the network, and thus solves many problems of the traditional networks that relies on distributed state. Nevertheless the whole systems remains an asynchronous distributed. Starting in 2015 we produced efficient algorithms to solve these inherent problems in SDN.</p>
-	<p><a href="/files/Intro-HPNL.pptx" target="_blank">Read more...</a></p>
-</div>
+		<body>
+   <div class="people page-content">
+      <div class="wrapper">
+         <div class="page-content">
+            <div class="wrapper">
+               <div class="container-fluid">
+                  <div class="mt-3">
+                     <div class="text-center mt-5">
+                        <img src="/images/people/ak.jpg" class="avatar">
+                        <h1>Ahmad Khonsari</h1>
+                        <h3>Associate Professor</h3>
+                        <h6>a_khonsari[at]ut[dot]ac[dot]ir</h6>
+                        <ul class="list-inline list-unstyled">
+                           <li class="list-inline-item"><a target="blank" href="https://ece.ut.ac.ir/en/~a_khonsari"><i class="fab fa-internet-explorer"></i></a></li>						
+                           <li class="list-inline-item"><a target="blank" href="https://www.linkedin.com/in/ahmad-khonsari-39684777/"><i class="fab fa-linkedin"></i></a></li>
+                           <li class="list-inline-item"><a target="blank" href="https://scholar.google.com/citations?user=Jih3eCUAAAAJ&amp;hl=en"><i class="fab fa-google"></i></a></li>
+                           <li class="list-inline-item"><a target="blank" href="https://www.researchgate.net/profile/Ahmad-Khonsari"><i class="fab fa-researchgate"></i></a></li>
+                           <li class="list-inline-item"><a target="blank" href="https://orcid.org/0000-0002-8669-4001"><i class="fab fa-orcid"></i></a></li>						   
+                        </ul>
+                     </div>
+                     <div>
+                        <h3>Education</h3>
+                        <ul>
+                           <li>Ph.D., Computer Science, University of Glasgow (2000-2003)</li>
+                           <li>M.Sc., Computer Architecture, Iran University of Science and Technology (1993-1996)</li>
+                           <li>B.Sc., Computer Engineering, Shahid Beheshti University (1986-1990)</li>
+                        </ul>
+                     </div>
+                     <div>
+                        <h3>Research Interests</h3>
+                        <ul>
+							<li>Distributed and Networked Systems</li>
+							<li>Software-Defined Networking</li>
+							<li>Cloud Computing</li>
+							<li>Wired and Wireless Networks</li>
+							<li>Parallel and Distributed</li>
+							<li>Network Security</li>
+							<li>Multimedia Systems</li>
+							<li>High Performance Computer Architectures</li>
+							<li>Performance Modelling & Evaluation</li>
+                        </ul>
+                     </div>
+					 <div>
+                        <h3>Courses Taught</h3>
+                        <ul>
+							<li>Performance Evaluation of Computer Systems (Graduate)</li>
+							<li>Randomized Algorithms (Graduate)</li>
+							<li>Seminar for Architecture (Graduate)</li>
+							<li>Quantum Computing (Graduate)</li>
+							<li>Advanced Network (Graduate)</li>
+							<li>Advanced Computer Networks (Graduate)</li>
+							<li>Internet Measurement (Graduate)</li>
+							<li>Computer Networks</li>
+							<li>Data Communication Systems and Coding</li>
+							<li>Computer Simulation</li>
+							<li>Computer Structure & Assembly Languages</li>
+							<li>Advanced Programming in C</li>
+							<li>Computer Architecture & Organisation</li>
+							<li>Digital Logic Design</li>
+							<li>Electronics</li>
+                        </ul>
+                     </div>
+                     <div>
+                        <h3>Books</h3>
+						<ul>
+							<li>Title (Persian): استنباط آماری: پیش‌درآمدی بر علوم داده و یادگیری ماشین ۱</li>
+							Publisher: The Publishing Office Center of Shahed University</br>
+							Print publication year: 2021</br>
+							ISBN: 978-600-6121-86-4</br>
+						</ul>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</body>
       </div>
     </div>
 
