--- a/people/mahdi-dolati.html
+++ b/people/mahdi-dolati.html
@@ -74,38 +74,41 @@
 
     <div class="page-content">
       <div class="wrapper">
-		<div class="home">
-
-	<img class="img-cover mb-3" src="/images/1.jpg">
-
-    <div class="announcement-box" style="margin-top:30px">
-        <h2>Announcements</h2>
-
-
-    <ul>
-<!--        example of announcements -->
-<!--        <li class="no-p-margin"> -->
-<!--           Please Join the telegram channel [<a href="https://t.me/ChannelName" target="_blank">@ChannelName</a>] -->
-<!--            <p></p>-->
-
-<!--            -->
-<!--        </li>-->
-
-        <li class="no-p-margin">
-            High Performance Network Laboratory Website [<a href="https://hpnl.ir" target="_blank">hpnl.ir</a>]
-            <p></p>
-
-        </li>
-
-        
-    </ul>
-    </div>
-    <br />
-
-    <h2><b>High Performance Network Laboratory</b></h2>
-    <p>A unique blend of fundamental and applied research team, taking advantage of mathematical theorems so as to build practical systems for improving performance, dependability and security of computer and communication systems. SDN is a major paradigm shift in the networking. In SDNs a globally centralized entity, controls the behavior of the network, and thus solves many problems of the traditional networks that relies on distributed state. Nevertheless the whole systems remains an asynchronous distributed. Starting in 2015 we produced efficient algorithms to solve these inherent problems in SDN.</p>
-	<p><a href="/files/Intro-HPNL.pptx" target="_blank">Read more...</a></p>
-</div>
+		<body>
+   <div class="people page-content">
+      <div class="wrapper">
+         <div class="page-content">
+            <div class="wrapper">
+               <div class="container-fluid">
+                  <div class="mt-3">
+                     <div class="text-center mt-5">
+                        <img src="/images/alumni/mahdi_dolati.jpg" class="avatar">
+                        <h1>Mahdi Dolati</h1>
+                        <h3>Ph.D.</h3>
+                        <h6>mahdidolati[at]ut[dot]ac[dot]ir</h6>
+                        <ul class="list-inline list-unstyled">
+                           <li class="list-inline-item"><a target="blank" href="/people/mahdi-dolati.html"><i class="fab fa-internet-explorer"></i></a></li>						
+                           <li class="list-inline-item"><a target="blank" href="https://www.linkedin.com/in/mahdi-dolati-a71bb45a/"><i class="fab fa-linkedin"></i></a></li>
+                           <li class="list-inline-item"><a target="blank" href="https://scholar.google.ca/citations?user=b7A2CXYAAAAJ&hl=en"><i class="fab fa-google"></i></a></li>
+                           <li class="list-inline-item"><a target="blank" href="https://www.researchgate.net/profile/Mahdi_Dolati"><i class="fab fa-researchgate"></i></a></li>
+                           <li class="list-inline-item"><a target="blank" href="https://orcid.org/0000-0002-0778-1378"><i class="fab fa-orcid"></i></a></li>						   
+                        </ul>
+                     </div>
+                     <div>
+                        <h3>Education</h3>
+                        <ul>
+                           <li>Ph.D., Computer Engineering, University of Tehran (2015-2022)</li>
+                           <li>M.Sc., Computer Engineering, Sharif University of Technology (2013-2015)</li>
+                           <li>B.Sc., Computer Engineering, University of Tehran (2009-2013)</li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</body>
       </div>
     </div>
 
