--- a/qip/lectures/index.html
+++ b/qip/lectures/index.html
@@ -37,7 +37,7 @@
           <td><img width="75" src="/qip/images/tehran.png" valign="middle"></td>
           <td style="padding-left:10px;"><a style="font-size: 15px;color: gray; font-weight: bold;" class="site-title" href="https://ece.ut.ac.ir" target="_blank">ECE School of Engineering, University of Tehran</a>
           <br/>
-          <span style="margin-top: -2px;margin-bottom: -5px;" class="site-title"><b>Quantum Information Processing - University of Tehran</b></span>
+          <span style="margin-top: -2px;margin-bottom: -5px;" class="site-title"><b>Quantum Information Processing</b></span>
           <br/>
           <span style="color: gray;font-size: 12px;font-weight: bold;">Fall 2022</span>
           </td>
