fix people and useful reads

--- a/people/ahmad-khonsari.html
+++ b/people/ahmad-khonsari.html
@@ -89,7 +89,7 @@
                         <ul class="list-inline list-unstyled">
                            <li class="list-inline-item"><a target="blank" href="https://ece.ut.ac.ir/en/~a_khonsari"><i class="fab fa-internet-explorer"></i></a></li>						
                            <li class="list-inline-item"><a target="blank" href="https://www.linkedin.com/in/ahmad-khonsari-39684777/"><i class="fab fa-linkedin"></i></a></li>
-                           <li class="list-inline-item"><a target="blank" href="https://scholar.google.com/citations?user=Jih3eCUAAAAJ&amp;hl=en"><i class="fab fa-google"></i></a></li>
+                           <li class="list-inline-item"><a target="blank" href="https://scholar.google.com/citations?user=Xfvk1SoAAAAJ&hl=en"><i class="fab fa-google"></i></a></li>
                            <li class="list-inline-item"><a target="blank" href="https://www.researchgate.net/profile/Ahmad-Khonsari"><i class="fab fa-researchgate"></i></a></li>
                            <li class="list-inline-item"><a target="blank" href="https://orcid.org/0000-0002-8669-4001"><i class="fab fa-orcid"></i></a></li>						   
                         </ul>
