add people and add courses page

--- a/people/index.html
+++ b/people/index.html
@@ -60,9 +60,10 @@
     <li><a class="page-link" href="/"><i class="fa fa-home fa-lg"></i>Home</a></li>
     <li><a class="page-link" href="/people/"><i class="fas fa-user-friends"></i> People</a></li>	
     <li><a class="page-link" href="/alumni/"><i class="fas fa-user-graduate"></i> Alumni</a></li>
+    <li><a class="page-link" href="/courses/"><i class="fas fa-file-alt"></i> Courses</a></li>					
     <li><a class="page-link" href="/books/"><i class="fas fa-book"></i> Books</a></li>	
     <li><a class="page-link" href="/useful-reads/"><i class="fas fa-book-open"></i> Useful reads</a></li>
-    <li><a class="page-link" href="/useful-links/"><i class="fas fa-globe"></i> Useful links</a></li>			
+    <li><a class="page-link" href="/useful-links/"><i class="fas fa-globe"></i> Useful links</a></li>		
 </ul>
 
      </div>  
@@ -159,7 +160,17 @@
                 <div class="image--cover-container">
 						<img src="/images/people/mohammadreza_keshtkar.jpg" class="image--cover">
                     <p>Mohammad Reza Keshtkar Langerodi</p>
-                </div>							 
+                </div>
+
+                <div class="image--cover-container">
+						<img src="/images/people/sz.jpg" class="image--cover">
+                    <p>Sajjad Zare</p>
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/people/default.png" class="image--cover">
+                    <p>Negar Rezaei</p>
+                </div>					
 
             </div>
         </div>
