--- a/people/index.html
+++ b/people/index.html
@@ -168,7 +168,7 @@
                 </div>	
 
                 <div class="image--cover-container">
-						<img src="/images/people/default.png" class="image--cover">
+						<img src="/images/people/nr.png" class="image--cover">
                     <p>Negar Rezaei</p>
                 </div>					
 
