--- a/books/index.html
+++ b/books/index.html
@@ -60,10 +60,12 @@
     <li><a class="page-link" href="/"><i class="fa fa-home fa-lg"></i>Home</a></li>
     <li><a class="page-link" href="/people/"><i class="fas fa-user-friends"></i> People</a></li>	
     <li><a class="page-link" href="/alumni/"><i class="fas fa-user-graduate"></i> Alumni</a></li>
-    <li><a class="page-link" href="/courses/"><i class="fas fa-file-alt"></i> Courses</a></li>					
     <li><a class="page-link" href="/books/"><i class="fas fa-book"></i> Books</a></li>	
-    <li><a class="page-link" href="/useful-reads/"><i class="fas fa-book-open"></i> Useful reads</a></li>
-    <li><a class="page-link" href="/useful-links/"><i class="fas fa-globe"></i> Useful links</a></li>		
+	<li><a class="page-link" href="/publications/"><i class="fas fa-file-alt"></i> Publications</a></li>
+    <li><a class="page-link" href="/courses/"><i class="fas fa-book-open"></i> Courses</a></li>					
+    <li><a class="page-link" href="/useful-reads/"><i class="fas fa-glasses"></i> Useful reads</a></li>
+    <li><a class="page-link" href="/useful-links/"><i class="fas fa-globe"></i> Useful links</a></li>
+			
 </ul>
 
      </div>  
