--- a/alumni/index.html
+++ b/alumni/index.html
@@ -180,7 +180,7 @@
                 </div>		
 				
                 <div class="image--cover-container">
-					<a href="https://liu.se/en/employee/mohbo63" target="_blank">																				
+					<a href="https://www.ida.liu.se/~mohbo63" target="_blank">																				
 						<img src="/images/alumni/mohammad_borhani.jpg" class="image--cover">
                     <p>Mohammad Borhani</p>
 					</a>
