--- a/qip/index.html
+++ b/qip/index.html
@@ -90,7 +90,7 @@
 <!--        </li>-->
 
         <li class="no-p-margin">
-            High Performance Network Laboratory Website [<a href="http://hpnl.ir" target="_blank">hpnl.ir</a>]
+            2022-09-17: The Class on Sunday, September 18 will not be held.
             <p></p>
 
         </li>
