add qip announcement

--- a/qip/index.html
+++ b/qip/index.html
@@ -88,7 +88,16 @@
 
 <!--            -->
 <!--        </li>-->
+		<li class="no-p-margin">
+            2022-09-18: Lecture 0 was released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
+            <p></p>
 
+        </li>
+		<li class="no-p-margin">
+            2022-09-18: Skype group link was released in [<a href="https://elearn.ut.ac.ir" target="_blank">ELEARN</a>].
+            <p></p>
+
+        </li>
         <li class="no-p-margin">
             2022-09-17: The Class on Sunday, September 18 will not be held.
             <p></p>
