--- a/publications/index.html
+++ b/publications/index.html
@@ -194,7 +194,41 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 1. Minimizing Update Makespan in SDNs without TCAM Overhead </b>
+				<b> 1. Co-Evolution of Viral Processes and Structural Stability in Signed Social Networks </b>
+			</div>
+			<div class="paper-icon">
+				<a>  <i class="fas fa-university"></i> </a>
+				<a>  <i class="far fa-file-pdf"></i> </a>
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Transactions on Knowledge and Data Engineering / 2022 </i>
+		</div>
+	</div>
+	<hr width="50%">
+	
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> 2. Serverless Computing: A Survey of Opportunities, Challenges, and Applications </b>
+			</div>
+			<div class="paper-icon">
+				<a>  <i class="fas fa-university"></i> </a>
+				<a>  <i class="far fa-file-pdf"></i> </a>
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> ACM Computing Surveys / 2022 </i>
+		</div>
+	</div>
+	<hr width="50%">
+	
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> 3. Minimizing Update Makespan in SDNs without TCAM Overhead </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -211,7 +245,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 2. Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
+				<b> 4. Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -228,7 +262,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 3. Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
+				<b> 5. Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -245,7 +279,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 4. Stability region and delay analysis of a SWIPT-based two-way relay network with opportunistic network coding </b>
+				<b> 6. Stability region and delay analysis of a SWIPT-based two-way relay network with opportunistic network coding </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -262,7 +296,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 5. Customizing clos network-on-chip for neural networks </b>
+				<b> 7. Customizing clos network-on-chip for neural networks </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -279,7 +313,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 6. Cost-effective low-delay design for multiparty cloud video conferencing </b>
+				<b> 8. Cost-effective low-delay design for multiparty cloud video conferencing </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -296,7 +330,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 7. Multiperiod network rate allocation with end-to-end delay constraints </b>
+				<b> 9. Multiperiod network rate allocation with end-to-end delay constraints </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -313,7 +347,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 8. A dummy-based approach for preserving source rate privacy </b>
+				<b> 10. A dummy-based approach for preserving source rate privacy </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
