--- a/people/mahdi-dolati.html
+++ b/people/mahdi-dolati.html
@@ -94,7 +94,8 @@
                            <li class="list-inline-item"><a target="blank" href="https://www.linkedin.com/in/mahdi-dolati-a71bb45a/"><i class="fab fa-linkedin"></i></a></li>
                            <li class="list-inline-item"><a target="blank" href="https://scholar.google.ca/citations?user=b7A2CXYAAAAJ&hl=en"><i class="fab fa-google"></i></a></li>
                            <li class="list-inline-item"><a target="blank" href="https://www.researchgate.net/profile/Mahdi_Dolati"><i class="fab fa-researchgate"></i></a></li>
-                           <li class="list-inline-item"><a target="blank" href="https://orcid.org/0000-0002-0778-1378"><i class="fab fa-orcid"></i></a></li>						   
+                           <li class="list-inline-item"><a target="blank" href="https://orcid.org/0000-0002-0778-1378"><i class="fab fa-orcid"></i></a></li>
+						   <li class="list-inline-item"><a target="blank" href="https://www.webofscience.com/wos/author/record/2263898"><i class="fa fa-user-circle" aria-hidden="true"></i></a></li>
                         </ul>
                      </div>
                      <div>
