update qip course

--- a/qip/index.html
+++ b/qip/index.html
@@ -56,10 +56,10 @@
     <div class="trigger"><h1>Main Navigation</h1>
 
  <ul class="menu">
-    <li><a class="page-link" href="/qip/"><i class="fa fa-home fa-lg"></i>Home</a></li>
+    <li><a class="page-link" href="/qip/"><i class="fa fa-home fa-lg"></i> Home</a></li>
     <li><a class="page-link" href="/qip/lectures/"><i class="fa fa-book-reader"></i> Lectures</a></li>
     <li><a class="page-link" href="/qip/assignments/"><i class="fa fa-book-open"></i> Assignments</a></li>
-    <li><a class="page-link" href="/qip/final_project/"><i class="fa fa-user-graduate"></i>Final Project</a></li>
+    <li><a class="page-link" href="/qip/projects/"><i class="fa fa-user-graduate"></i> Projects</a></li>
     <li><a class="page-link" href="/qip/course-materials/"><i class="fa fa-book"></i> Course Materials</a></li>
 </ul>
 
@@ -88,6 +88,16 @@
 
 <!--            -->
 <!--        </li>-->
+		<li class="no-p-margin">
+            2022-10-02: Project 0 was released. Check [<a href="https://hpnl.ir/qip/projects" target="_blank">PROJECTS</a>].
+            <p></p>
+
+        </li>
+		<li class="no-p-margin">
+            2022-09-20: Lectures 1 & 2 were released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>
 		<li class="no-p-margin">
             2022-09-18: Lecture 0 was released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
             <p></p>
