Quantum Course Update

--- a/qip/index.html
+++ b/qip/index.html
@@ -89,6 +89,11 @@
 <!--            -->
 <!--        </li>-->
 		<li class="no-p-margin">
+            2022-10-16: Lectures 3 & 4 were released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>
+		<li class="no-p-margin">
             2022-10-02: Project 0 was released. Check [<a href="https://hpnl.ir/qip/projects" target="_blank">PROJECTS</a>].
             <p></p>
 
