Add L5 and L6 and H2 and fix somethings

--- a/qip/index.html
+++ b/qip/index.html
@@ -89,6 +89,21 @@
 <!--            -->
 <!--        </li>-->
 		<li class="no-p-margin">
+            2022-11-20: Lectures 6 was released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>
+		<li class="no-p-margin">
+            2022-11-13: Lectures 5 was released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>
+		<li class="no-p-margin">
+            2022-11-06: Homework 2 was released. Check [<a href="https://hpnl.ir/qip/assignments" target="_blank">ASSIGNMENTS</a>].
+            <p></p>
+
+        </li>
+		<li class="no-p-margin">
             2022-10-25: Homework 1 was released. Check [<a href="https://elearn.ut.ac.ir" target="_blank">ELEARN</a>].
             <p></p>
 
