--- a/qip/index.html
+++ b/qip/index.html
@@ -89,6 +89,11 @@
 <!--            -->
 <!--        </li>-->
 		<li class="no-p-margin">
+            2022-11-20: Homework 3 was released. Check [<a href="https://hpnl.ir/qip/assignments" target="_blank">ASSIGNMENTS</a>].
+            <p></p>
+
+        </li>
+		<li class="no-p-margin">
             2022-11-20: Lectures 6 was released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
             <p></p>
 
@@ -104,7 +109,7 @@
 
         </li>
 		<li class="no-p-margin">
-            2022-10-25: Homework 1 was released. Check [<a href="https://elearn.ut.ac.ir" target="_blank">ELEARN</a>].
+            2022-10-25: Homework 1 was released. Check [<a href="https://hpnl.ir/qip/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
 
         </li>
