--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
 
     <h2><b>High Performance Network Laboratory</b></h2>
     <p>A unique blend of fundamental and applied research team, taking advantage of mathematical theorems so as to build practical systems for improving performance, dependability and security of computer and communication systems. SDN is a major paradigm shift in the networking. In SDNs a globally centralized entity, controls the behavior of the network, and thus solves many problems of the traditional networks that relies on distributed state. Nevertheless the whole systems remains an asynchronous distributed. Starting in 2015 we produced efficient algorithms to solve these inherent problems in SDN.</p>
-	<p><a href="/files/Intro-HPNL.pptx" target="_blank">Read more...</a></p>
+	<p><a href="/files/Intro-HPNL.pptx" target="_blank">PowerPoint (Current Research Activities)</a></p>
+	<p><a href="/files/Intro-HPNL(Voice).pptx" target="_blank">PowerPoint with Voice (Current Research Activities)</a></p>
+
 </div>
       </div>
     </div>
