--- a/publications/index.html
+++ b/publications/index.html
@@ -190,11 +190,62 @@
 	
 	<h2 class="h2-header"> Top Journals </h2>
 	<hr width="100%">
+
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> 1. Serverless Computing: A Survey of Opportunities, Challenges, and Applications </b>
+			</div>
+			<div class="paper-icon">
+				<a>  <i class="fas fa-university"></i> </a>
+				<a>  <i class="far fa-file-pdf"></i> </a>
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> ACM Computing Surveys 54 (11s) / 2022 </i>
+		</div>
+	</div>
+	<hr width="50%">
 	
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 1. Co-Evolution of Viral Processes and Structural Stability in Signed Social Networks </b>
+				<b> 2. On the Age of Status Updates in Unreliable Multi-Source M/G/1 Queueing Systems </b>
+			</div>
+			<div class="paper-icon">
+				<a>  <i class="fas fa-university"></i> </a>
+				<a>  <i class="far fa-file-pdf"></i> </a>
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Communications Letters / 2022 </i>
+		</div>
+	</div>
+	<hr width="50%">
+	
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> 3. Layer-Aware Containerized Service Orchestration in Edge Networks </b>
+			</div>
+			<div class="paper-icon">
+				<a>  <i class="fas fa-university"></i> </a>
+				<a>  <i class="far fa-file-pdf"></i> </a>
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Transactions on Network and Service Management / 2022 </i>
+		</div>
+	</div>
+	<hr width="50%">
+	
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> 4. Co-Evolution of Viral Processes and Structural Stability in Signed Social Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -211,7 +262,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 2. Serverless Computing: A Survey of Opportunities, Challenges, and Applications </b>
+				<b> 5. Serverless Computing: A Survey of Opportunities, Challenges, and Applications </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -228,7 +279,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 3. Minimizing Update Makespan in SDNs without TCAM Overhead </b>
+				<b> 6. Minimizing Update Makespan in SDNs without TCAM Overhead </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -245,7 +296,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 4. Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
+				<b> 7. Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -262,7 +313,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 5. Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
+				<b> 8. Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -279,7 +330,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 6. Stability region and delay analysis of a SWIPT-based two-way relay network with opportunistic network coding </b>
+				<b> 9. Stability region and delay analysis of a SWIPT-based two-way relay network with opportunistic network coding </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -296,7 +347,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 7. Customizing clos network-on-chip for neural networks </b>
+				<b> 10. Customizing clos network-on-chip for neural networks </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -313,7 +364,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 8. Cost-effective low-delay design for multiparty cloud video conferencing </b>
+				<b> 11. Cost-effective low-delay design for multiparty cloud video conferencing </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -330,7 +381,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 9. Multiperiod network rate allocation with end-to-end delay constraints </b>
+				<b> 12. Multiperiod network rate allocation with end-to-end delay constraints </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -347,7 +398,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 10. A dummy-based approach for preserving source rate privacy </b>
+				<b> 13. A dummy-based approach for preserving source rate privacy </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
