--- a/people/index.html
+++ b/people/index.html
@@ -207,7 +207,7 @@
                 </div>		
 				
                 <div class="image--cover-container">
-						<img src="/images/people/ny.png" class="image--cover">
+						<img src="/images/people/ny.jpg" class="image--cover">
                     <p>Nadia Yazdani</p>
                 </div>
 
