--- a/pecs/index.html
+++ b/pecs/index.html
@@ -142,7 +142,7 @@
 						</div>
 						
 						<div class="image--cover-container">
-							<img src="/pecs/images/people/ny.png" class="image--cover">
+							<img src="/pecs/images/people/ny.jpg" class="image--cover">
 							<p>Nadia Yazdani</p>
 						</div>
 						
