--- a/qip/index.html
+++ b/qip/index.html
@@ -89,6 +89,16 @@
 <!--            -->
 <!--        </li>-->
 		<li class="no-p-margin">
+            2022-12-09: Homework 4 was released. Check [<a href="https://hpnl.ir/qip/assignments" target="_blank">ASSIGNMENTS</a>].
+            <p></p>
+
+        </li>
+		<li class="no-p-margin">
+            2022-11-29: A Quiz on Sunday, December 11 will be held. Check [<a href="https://elearn.ut.ac.ir" target="_blank">ELEARN</a>].
+            <p></p>
+
+        </li>
+		<li class="no-p-margin">
             2022-11-20: Homework 3 was released. Check [<a href="https://hpnl.ir/qip/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
 
