Update QIP Course

--- a/qip/index.html
+++ b/qip/index.html
@@ -94,10 +94,20 @@
 
         </li>
 		<li class="no-p-margin">
+            2022-12-04: Lectures 8 was released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>		
+		<li class="no-p-margin">
             2022-11-29: A Quiz on Sunday, December 18 will be held. Check [<a href="https://elearn.ut.ac.ir" target="_blank">ELEARN</a>].
             <p></p>
 
         </li>
+		<li class="no-p-margin">
+            2022-11-27: Lectures 7 was released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>		
 		<li class="no-p-margin">
             2022-11-20: Homework 3 was released. Check [<a href="https://hpnl.ir/qip/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
