Update QIP Course

--- a/qip/index.html
+++ b/qip/index.html
@@ -89,6 +89,36 @@
 <!--            -->
 <!--        </li>-->
 		<li class="no-p-margin">
+            2023-01-01: Project Final was released. Check [<a href="https://hpnl.ir/qip/projects" target="_blank">PROJECTS</a>].
+            <p></p>
+
+        </li>
+		<li class="no-p-margin">
+            2022-12-31: Lectures 12 was released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>	
+		<li class="no-p-margin">
+            2022-12-25: Lectures 11 was released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>			
+		<li class="no-p-margin">
+            2022-12-20: Project 1 was released. Check [<a href="https://hpnl.ir/qip/projects" target="_blank">PROJECTS</a>].
+            <p></p>
+
+        </li>
+		<li class="no-p-margin">
+            2022-12-18: Lectures 10 was released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>			
+		<li class="no-p-margin">
+            2022-12-11: Lectures 9 was released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>			
+		<li class="no-p-margin">
             2022-12-09: Homework 4 was released. Check [<a href="https://hpnl.ir/qip/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
 
