Add Note11 QIP Course

--- a/qip/lectures/index.html
+++ b/qip/lectures/index.html
@@ -371,6 +371,7 @@
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
                     [<a title="Download slides (pdf)" href="/qip/static_files/lectures/Lecture11.pdf">Slide</a>]
+					[<a title="Download slides (pdf)" href="/qip/static_files/notes/Note11.pdf">Note</a>]										
                 </strong>
             </div>
         </div>
